--- a/index.html
+++ b/index.html
@@ -60,16 +60,12 @@
                 <div class="row">
                     <div class="col-6">
                         <h3>About me</h3>
-                        Hi, I'm a student at Indiana University Bloomington, majoring in Computer Science. 
-                        Interested in Software Engineering, Clean Technologies, Product, and Venture Capital. 
-                        Please feel free to connect and/or reach out to discuss potential opportunities or to have awesome conversations. 
-
-
+I'm a student at IU Bloomington, majoring in Computer Science. Deeply interested in Software Engineering, Product Management, and Venture Capital. At Indiana University, I lead, INgineering at IU, a student led organization that fosters innovation, and technical acumen among engineering students, as the President. 
+In my spare time, I like to write about venture, finance, and tech ecosystems of India and America on my Substack newsletter. Happy to have awesome conversations related to tech, social impact, clean technologies, or any potential interests that we may share.
                         <br><br>
 
                         I love <i> wordle, street art</i>, and <i> exploring coffee shops </i>.
                         <br><br>
-
 
                     </div>
                     <div class="col-6">
