--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
                 <a href="resume.html" class="text-decoration-none text-dark"><i class="fas fa-file"></i>
-                    Resume/CV</a>
+                    SWE Resume</a>
 
                 <hr class="solid">
                 <a href="https://www.linkedin.com/in/Rabiaaghafoor/" target="_blank" rel="noopener noreferrer"
@@ -106,7 +106,7 @@ In my spare time, I like to write about venture, finance, and tech ecosystems of
 <footer class="page-footer py-5">
     <div class="footer-copyright text-center">
          <b> Authencity Statement: </b> I hereby certify that the content included in this portfolio/website is my own original work, and accurate to my knowledge. Work included which was conducted as part of a team or other group is indicated and attributed as such the other team members are named and a true description of my role in the project is included. <br>
-         <b>Last updated: </b> May 8, 2024
+         <b>Last updated: </b> May 30, 2024
     </div>
 </footer>
 
