--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
         <h1><b> Rabia's SWE Resume </h1></b>
     <div class="prof">
         <p><h4> Click the button below to download my Resume</h4></p>
-        <a href="SWE Resume - Rabia Abdul Ghafoor .docx.pdf"><button class="btn" onclick>Download Rabia's SWE Resume</button></a>
+        <a href="SWE_Resume_Rabia_Abdul_Ghafoor.pdf"><button class="btn" onclick>Download Rabia's SWE Resume</button></a>
        
                 
     </div>
