--- a/readinglist.html
+++ b/readinglist.html
@@ -1,6 +1,16 @@
 
 <html>  
     <head> 
+
+                <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FC3WYB1HF"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-3FC3WYB1HF');
+        </script>    
          <h2> Life Changing Books  </h2> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
         <link rel = "stylesheet" href="readinglist.css">
