Updated resume.html with google tag

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,14 @@
 <html>
-    <head>
+        <head>
+                <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-3FC3WYB1HF"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-3FC3WYB1HF');
+        </script>
         <title> Resume </title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
         <body>
