--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ In my spare time, I like to write about venture, finance, and tech ecosystems of
 
                     </div>
                     <div class="col-6">
-                        <img src="headshot.jpeg" alt=" Rabia Ghafoor" width="100%">
+                        <img src="headshot.jpeg" alt="Rabia_Ghafoor" width="100%">
                     </div>
                     
                 </div>
