--- a/index.html
+++ b/index.html
@@ -53,9 +53,18 @@
                 <a href="resume.html" class="text-decoration-none text-dark"><i class="fas fa-file"></i>
                     SWE Resume</a>
                 <hr class="solid">
+
+              
+                    <a href="pm.html" class="text-decoration-none text-dark"><i class="fas fa-file"></i>
+                        PM Resume</a>
+                    <hr class="solid">
+
+             
+
                 <a href="https://www.linkedin.com/in/Rabiaaghafoor/" target="_blank" rel="noopener noreferrer"
                     class="text-decoration-none text-dark">
                     <i class="fab fa-linkedin" color="#0000FF"></i> LinkedIn</a>
+
                 <hr class="solid">
                 <a href="https://twitter.com/Rabiaaghafoor" target="_blank" rel="noopener noreferrer"
                     class="text-decoration-none text-dark"><i class="fab fa-twitter-square"></i>
@@ -81,7 +90,8 @@
                         I'm a student at IU Bloomington, majoring in Computer Science. Deeply interested in Software
                         Engineering, Product Management, and Venture Capital. At Indiana University, I serve, INgineering
                         at IU, a student led organization that fosters innovation, and technical acumen among
-                        engineering students, as the President.
+                        engineering students, as the President. Most Recently, I served the Third Edition of the Luddy Hackathon as the President.
+                        <br>
                         In my spare time, I like to write about venture, finance, and tech ecosystems of India and
                         America on my Substack newsletter. Happy to have awesome conversations related to tech, social
                         impact, clean technologies, or any potential interests that we may share.
@@ -122,7 +132,7 @@
 <footer class="page-footer py-5">
     <div class="footer-copyright text-center">
         <b> Authencity Statement: </b> I hereby certify that the content included in this portfolio/website is my own original work, and accurate to my knowledge. Work included which was conducted as part of a team or other group is indicated and attributed as such the other team members are named and a true description of my role in the project is included. <br>
-        <b>Last updated: </b> July 28, 2024
+        <b>Last updated: </b> November 30, 2024
     </div>
 </footer>
 
