--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
     </div>
     <br></br>
     <hr>
-    <iframe width="1150" height="1150" src="Resume - Rabia Abdul Ghafoor.pdf" frameborder="0"></iframe>
+    <iframe width="1150" height="1150" src="SWE_Resume_Rabia_Ghafoor.pdf" frameborder="0"></iframe>
     
         </body>
     </head>
